--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,12 @@
     background-color: #EBEBEB;
     height: 85px;
 }
+.contenedor .heading1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 .contenedor .logo #logo2016 {
     line-height: 140px;
     height: 140px;
@@ -99,6 +105,7 @@
 .cartilla {
     border: 2px solid #ccc;
     padding: 10px;
+    border-radius: 10px;
 }
 #imgOficial {
     height: 150px;
@@ -143,4 +150,11 @@
 #boxSortBy {
     display: flex;
     justify-content: center;
+}
+#topContainer {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 50px;
+    line-height: 1.3;
+    margin-top: 100px;
 }
