--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,7 @@
     top:500px;
     right: 0px;
     margin-right: 100px;
+    flex: 0 0 auto;
 }   
 #pet3 {
     height: 350px;
@@ -167,8 +168,14 @@
 }
 #boxSortBy {
     display: flex;
-    justify-content: center;
+    justify-content: center; /* Centra horizontalmente los botones */
+    margin-top: 20px; /* Ajusta el margen superior según sea necesario */
 }
+
+#boxSortBy .order {
+    margin-right: 200px; /* Añade un espacio entre los botones */      
+}
+    
 #topContainer {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -197,10 +204,6 @@
 #generalStats {
     display: flex;
     align-items: center;
-}
-  
-#pet3 {
-    flex: 0 0 auto;
 }
   
 #statisticsCont {
@@ -263,4 +266,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.top10 {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente el contenedor */
+    margin-left: 200px;
+  }
+  
+.top10 button {
+    display: flex;
+    flex-direction: column;
+    line-height: 4px;
+    align-items: center; /* Centra verticalmente el contenido del botón */
+    background-color: #081778d0;
+    color: #FFDC0C;
+    font-weight: bolder;
+    padding: 8px;
+    border: none;
+    border-radius: 4px;
+  }
+
+.top10 :hover {
+    cursor: pointer;
 }
