--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,24 @@ body {
 }
 
 header {
+    margin: 0;
     position: sticky;
     top: 0;
     z-index: 1;
+    animation: fadeDown linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 350px;
 }
 
+@keyframes fadeDown {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
 
 .page {
     display: none;
@@ -130,7 +143,8 @@ header {
     display: none;
 }
 
-.athletes-title {
+.athletes-title,
+.top10-title {
     text-align: center;
     margin: 40px;
 }
@@ -161,17 +175,16 @@ header {
 
 #general {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    gap: 50px;
-    margin-top: 30px;
+    grid-template-columns: 1fr 2fr;
+    margin: 40px;
 }
 
 #athletes-info {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     width: 100%;
     height: auto;
-    gap: 50px;
+    gap: 30px;
     line-height: 1.3;
 }
 
@@ -198,16 +211,22 @@ header {
 
 }
 
+
 .cartilla:hover {
     background-color: rgba(7, 154, 252, 0.192);
 }
 
-#pet1,
-#pet2 {
-    width: 100%;
-    height: auto;
-    position: sticky;
-    top: 100px;
+.cartilla-top10 {
+    border: 2px solid #c4d2e3;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: rgba(227, 232, 252, 0.269);
+    transition: transform 0.3s ease;
+}
+
+.cartilla-top10:hover {
+    background-color: rgb(183, 226, 255);
+    transform: translateY(-20px) scale(1.1);
 }
 
 #petTom {
@@ -215,13 +234,8 @@ header {
     margin-top: 180px;
     width: 350px;
     height: auto;
-
-}
-
-#petgreen {
-    margin-top: 140px;
-    width: 200px;
-    height: auto;
+    position: sticky;
+    top: 30%;
 }
 
 #pet3 {
@@ -234,8 +248,7 @@ header {
 
 #pets-together {
     margin-top: 50px;
-    width: 350px;
-    height: auto;
+    max-height: 280px;
 }
 
 #petestad {
@@ -255,7 +268,7 @@ header {
 #imgOficial {
     display: flex;
     justify-content: center;
-    height: 60px;
+    max-height: 60px;
 }
 
 .search-container {
@@ -305,19 +318,20 @@ header {
 
 
 #general2 {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 30PX;
+    margin-top: 16px;
+    margin-right: 50px;
+    margin-left: 50px;
 }
 
 #topContainer {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
     line-height: 1.3;
-    margin-top: 75px;
-    margin-right: 50px;
-    margin-left: 10px;
+    margin-top: 50px;
 }
 
 #search-bar {
@@ -337,20 +351,21 @@ header {
 }
 
 #generalStats {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    margin-top: 30px;
 }
 
 #statisticsCont {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .headingStats {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 50px;
 }
 
 .cardsAth {
@@ -358,13 +373,25 @@ header {
     padding: 20px;
     border-radius: 10px;
     margin-right: 30px;
+    transition: 1s;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+
 }
+
+.cardsAth:hover {
+    cursor: pointer;
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
+    -moz-transform: rotateY(360deg);
+}
+
 
 #generalStats h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 90px;
+    margin-top: 45px;
 }
 
 .percentages {
@@ -425,36 +452,20 @@ header {
 
 .homeBtn :hover {
     cursor: pointer;
+    color: #4138c4d0;
 }
 
-#pet4 {
+#pet4, #pet5 {
     height: 350px;
     width: auto;
     display: flex;
     padding-top: 170px;
     flex: 0 0 auto;
-    margin-left: 50px;
+    margin: 10px;
 }
 
-#pet5 {
-    height: 350px;
-    width: auto;
-    display: flex;
-    padding-top: 170px;
-    flex: 0 0 auto;
-}
-
-#imgoro {
-    height: 250px;
-    width: auto;
-}
-
-#imgplata {
-    padding-top: 19px;
-    height: 220px;
-    width: auto;
-}
-
+#imgoro,
+#imgplata,
 #imgbronce {
     padding-top: 19px;
     height: 220px;
@@ -463,8 +474,8 @@ header {
 
 #pet3 {
     margin-left: 5px;
-    margin-right: none;
-    margin-top: 80px;
+    position: sticky;
+    top: 0;
 }
 
 @media (max-width: 1290px) {
@@ -480,7 +491,7 @@ header {
         cursor: pointer;
     }
 
-    #logo2016, #imgOficial {
+    #imgOficial {
         height: 250px;
         width: auto;
     }
@@ -536,19 +547,21 @@ header {
         height: 50px;
         font-size: large;
     }*/
-    /*#pet1{
+    #pet1 {
         display: none;
     }
-    #pet2{
-        display: none;
+
+    #general {
+        grid-template-columns: 1fr;
+        margin: 20px;;
     }
+
     #athletes-info{
         font-size: x-large;
         grid-template-columns: repeat(2, 1fr);
         padding: 16px 32px;
         gap: 50px;
-        margin-left: 17px;
-        margin-right: 17px;
+        margin: 17px;
         line-height: 1,3;
     }
     /*Pagina Top*/
@@ -559,8 +572,8 @@ header {
     }
 
     #general2 {
-        display: flex;
-        flex-direction: row;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
     }
 
     #general2 #pet3 {
@@ -585,17 +598,17 @@ header {
 
     #pet4 {
         padding-top: 10px;
-        height: 470px;
+      
     }
 
     #generalStats {
         display: flex;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
     }
 
     #statisticsCont {
-        padding-top: 50px;
-        padding-left: 30px;
+        padding: 40px;
     }
 
     .cardsAth {
@@ -606,6 +619,5 @@ header {
 
     #pet5 {
         padding-top: 25px;
-        padding-left: 170px;
     }
 }
